# Chessbot2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
src/: attacks.c  attacks.h  bitboard.c  bitboard.h  evaluation.c  evaluation.h  main.c  movegen.c  movegen.h  position.c  position.h  search.c  search.h  stack.c  stack.h  tables.c  tables.h  tests.c  tests.h  types.h  uci.c
